# discrete-math-2026-logic-library

./: .gitignore  README.md  all_include.py  build.py  test.py
benchmark/: CMakeLists.txt  run_test.py
benchmark/source/: legacy.cpp  recursion.cpp  simd_avx2_fill.cpp  simd_avx2_precalc.cpp  simd_avx512_omp_parallel.cpp  simd_avx512_precalc.cpp  simd_ord_fill.cpp  simd_ord_precalc.cpp
benchmark/test_results/run_20260324_091756/: benchmark_results.csv
benchmark/test_results/run_20260324_094521/: benchmark_results.csv
benchmark/utility/: checker.cpp  generator.py
logic/: constants.py  primary_normal_form.py  truth_table.py
logic_lib/: __init__.py  exception.py
